crates/escalier_parser/src/snapshots/escalier_parser__tests__member_access-3.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"p.x * p.x + p.y * p.y;\")"
---
Ok(
    Program {
        body: [
            ExprStmt(
                Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 21,
                        },
                    },
                    span: 0..21,
                    kind: BinaryExpr(
                        BinaryExpr {
                            op: Add,
                            left: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 9,
                                    },
                                },
                                span: 0..9,
                                kind: BinaryExpr(
                                    BinaryExpr {
                                        op: Mul,
                                        left: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 3,
                                                },
                                            },
                                            span: 0..3,
                                            kind: Member(
                                                Member {
                                                    obj: Expr {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 0,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 1,
                                                            },
                                                        },
                                                        span: 0..1,
                                                        kind: Ident(
                                                            Ident {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 0,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 1,
                                                                    },
                                                                },
                                                                span: 0..1,
                                                                name: "p",
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    prop: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 2,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 3,
                                                                },
                                                            },
                                                            span: 2..3,
                                                            name: "x",
                                                        },
                                                    ),
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        right: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 6,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 9,
                                                },
                                            },
                                            span: 6..9,
                                            kind: Member(
                                                Member {
                                                    obj: Expr {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 6,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 7,
                                                            },
                                                        },
                                                        span: 6..7,
                                                        kind: Ident(
                                                            Ident {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 6,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 7,
                                                                    },
                                                                },
                                                                span: 6..7,
                                                                name: "p",
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    prop: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 8,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 9,
                                                                },
                                                            },
                                                            span: 8..9,
                                                            name: "x",
                                                        },
                                                    ),
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                                inferred_type: None,
                            },
                            right: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 12,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 21,
                                    },
                                },
                                span: 12..21,
                                kind: BinaryExpr(
                                    BinaryExpr {
                                        op: Mul,
                                        left: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 12,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 15,
                                                },
                                            },
                                            span: 12..15,
                                            kind: Member(
                                                Member {
                                                    obj: Expr {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 12,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 13,
                                                            },
                                                        },
                                                        span: 12..13,
                                                        kind: Ident(
                                                            Ident {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 12,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 13,
                                                                    },
                                                                },
                                                                span: 12..13,
                                                                name: "p",
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    prop: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 14,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 15,
                                                                },
                                                            },
                                                            span: 14..15,
                                                            name: "y",
                                                        },
                                                    ),
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        right: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 18,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 21,
                                                },
                                            },
                                            span: 18..21,
                                            kind: Member(
                                                Member {
                                                    obj: Expr {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 18,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 19,
                                                            },
                                                        },
                                                        span: 18..19,
                                                        kind: Ident(
                                                            Ident {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 18,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 19,
                                                                    },
                                                                },
                                                                span: 18..19,
                                                                name: "p",
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    prop: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 20,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 21,
                                                                },
                                                            },
                                                            span: 20..21,
                                                            name: "y",
                                                        },
                                                    ),
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                    },
                                ),
                                inferred_type: None,
                            },
                        },
                    ),
                    inferred_type: None,
                },
            ),
        ],
    },
)
