crates/escalier_parser/src/snapshots/escalier_parser__tests__member_access-4.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"foo().bar();\")"
---
Ok(
    Program {
        body: [
            ExprStmt(
                Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 11,
                        },
                    },
                    span: 0..11,
                    kind: App(
                        App {
                            lam: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 9,
                                    },
                                },
                                span: 0..9,
                                kind: Member(
                                    Member {
                                        obj: Expr {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 0,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 5,
                                                },
                                            },
                                            span: 0..5,
                                            kind: App(
                                                App {
                                                    lam: Expr {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 0,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 3,
                                                            },
                                                        },
                                                        span: 0..3,
                                                        kind: Ident(
                                                            Ident {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 0,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 3,
                                                                    },
                                                                },
                                                                span: 0..3,
                                                                name: "foo",
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                    args: [],
                                                    type_args: None,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        prop: Ident(
                                            Ident {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 6,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 9,
                                                    },
                                                },
                                                span: 6..9,
                                                name: "bar",
                                            },
                                        ),
                                    },
                                ),
                                inferred_type: None,
                            },
                            args: [],
                            type_args: None,
                        },
                    ),
                    inferred_type: None,
                },
            ),
        ],
    },
)
